--- a/src/MainForm.form
+++ b/src/MainForm.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="EF-NR COPAS TOOL"/>
+    <Property name="title" type="java.lang.String" value="LAZYTOOL - EFAKTUR NR BY DATE OF MONTH"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
